Fix: Downgrade httpx to 0.27.2 for supabase compatibility

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,7 +13,7 @@ playwright==1.49.0
 selenium==4.26.1
 
 # HTTP 클라이언트
-httpx==0.28.0
+httpx==0.27.2  # supabase 2.9.1과 호환되는 버전
 requests==2.32.3
 aiohttp==3.11.2
 
