--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,8 +33,8 @@ ENV LC_ALL=ko_KR.UTF-8
 # 작업 디렉토리 설정
 WORKDIR /app
 
-# Stage 2: 의존성 설치
-FROM base AS dependencies
+# Stage 2: 프로덕션 런타임 (단순화된 버전)
+FROM base AS production
 
 # Python 의존성 파일 복사
 COPY requirements.txt .
@@ -47,33 +47,15 @@ RUN pip install --no-cache-dir -r requirements.txt
 RUN playwright install chromium
 RUN playwright install-deps chromium
 
-# Stage 3: 애플리케이션 빌드
-FROM dependencies AS builder
-
-# 애플리케이션 코드 복사
-COPY . .
-
-# 불필요한 파일 제거
-RUN find . -type f -name "*.pyc" -delete
-RUN find . -type d -name "__pycache__" -delete
-
-# Stage 4: 프로덕션 런타임
-FROM base AS production
-
 # 보안을 위한 non-root 사용자 생성
 RUN groupadd --gid 1001 appgroup
 RUN useradd --uid 1001 --gid 1001 --create-home appuser
 
-# 작업 디렉토리 설정
+# 작업 디렉토리 설정 및 권한 설정
 WORKDIR /app
 
-# 의존성 복사 (Python 3.10 경로 사용)
-COPY --from=dependencies /usr/local/lib/python3.10/site-packages /usr/local/lib/python3.10/site-packages
-COPY --from=dependencies /usr/local/bin /usr/local/bin
-COPY --from=dependencies /ms-playwright /ms-playwright
-
 # 애플리케이션 코드 복사
-COPY --from=builder --chown=appuser:appgroup /app .
+COPY --chown=appuser:appgroup . .
 
 # 로그 디렉토리 생성
 RUN mkdir -p /app/logs && chown -R appuser:appgroup /app/logs
@@ -96,4 +78,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
   CMD curl -f http://localhost:8001/health || exit 1
 
 # 애플리케이션 시작 (Gunicorn 사용)
-CMD ["gunicorn", "server:app", "--bind", "0.0.0.0:8001", "--workers", "4", "--worker-class", "uvicorn.workers.UvicornWorker", "--timeout", "120", "--keep-alive", "2"]
+CMD ["gunicorn", "server:app", "--bind", "0.0.0.0:8001", "--workers", "2", "--worker-class", "uvicorn.workers.UvicornWorker", "--timeout", "120", "--keep-alive", "2"]
