Create unified backend server with all platform APIs

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -78,4 +78,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
   CMD curl -f http://localhost:8001/health || exit 1
 
 # 애플리케이션 시작 (Gunicorn 사용)
-CMD ["gunicorn", "server:app", "--bind", "0.0.0.0:8001", "--workers", "2", "--worker-class", "uvicorn.workers.UvicornWorker", "--timeout", "120", "--keep-alive", "2"]
+CMD ["gunicorn", "main_server:app", "--bind", "0.0.0.0:8001", "--workers", "2", "--worker-class", "uvicorn.workers.UvicornWorker", "--timeout", "120", "--keep-alive", "2"]
